--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
           RAILS_ENV: test
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
+          RAILS_MASTER_KEY: ${{ secrets.RAILS_TEST_ENCRYPTED_KEY }}
         run: |
           sudo apt-get -yqq install libpq-dev
           bundle exec rails db:prepare
