--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 name: Continuous-Integration
-on: [push, pull_request]
+on: [push]
 
 jobs:
   BundlerAudit:
@@ -54,4 +54,3 @@ jobs:
           sudo apt-get -yqq install libpq-dev
           bundle exec rails db:prepare
           bundle exec rspec spec
-          
